   Ruslan Ostafiychuk via Raghav Kumar Gautam)

   FALCON-746 Add ACL validation and enforcement tests (Raghav Kumar Gautam via Ruslan Ostafiychuk)

   FALCON-743 Adding tests for cases related to usage of pipelines tag
   (Paul Isaychuk via Raghav Kumar Gautam)

   FALCON-589 Add test cases for various feed operations on Hcat feeds (Karishma G 
   via Samarth Gupta)

  IMPROVEMENTS
   FALCON-1253 Fortify ExternalFSTest (Ruslan Ostafiychuk)

   FALCON-1243 Feed test update as per new UI changes (Namit Maheshwari)

   FALCON-1241 Fix SearchApiTest according to changes in API, tag ClusterSetupTest,
   PrismProcessScheduleTest#testScheduleDeletedProcessOnBothColos (Paul Isaychuk)

   FALCON-1226 Stabilize testActionsPauseResume() (Ruslan Ostafiychuk)

   FALCON-1225 remove text line containing "Copyright" from regression 
   log4j.properties(Samarth Gupta)

   FALCON-1197 Use diamond operator in merlin and merlin-core (Ruslan Ostafiychuk)

   FALCON-1131 Fixing FeedClusterUpdateTest and name confilcts in FALCON-1113(Pragya M 
   via Samarth Gupta) 

   FALCON-1145 Changing entity name if it exceeds defined length(Pragya M via Samarth G)

   FALCON-1151 Migrate oozie related methods from InstanceUtil.java to OozieUtil.java
   (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1138: JDK requirement for merlin should be 1.7 (Raghav Kumar Gautam)

   FALCON-1135 Migrate methods related to *Merlin.java classes from InstanceUtil.java and
   Bundle.java (Ruslan Ostafiychuk)

   FALCON-1088 Fixing FeedDelayParallelTimeoutTest and renaming it to FeedDelayTest(Pragya M via 
   Samarth G)

   FALCON-1112 Migrate methods related to *Merlin.java classes from Util.java to their respective
    *Merlin.java (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1113 Clean up data files in merlin resource directory. Create better names for them
   (Paul Isaychuk via Ruslan Ostafiychuk)

   FALCON-1103 RetentionTest stabilization - remove check of all retention job actions